fix(Ay01): improve colors contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ li {
 }
 
 a {
-	color: orange;
+	color: #800000;
 	text-decoration: none;
 }
 
@@ -73,12 +73,16 @@ main {
 
 footer {
   background-color: #444;
-  color: #aaa;
+  color: #f5f5f5;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
+}
+
+footer a {
+  color: #e9e97c;
 }
 
 /* ====================== Navigation ====================== */
@@ -126,7 +130,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-  color: #0275d8;
+  color: #0000a0;
   text-decoration: none;
 }
 
@@ -215,7 +219,7 @@ nav h1 a {
 }
 
 #restaurants-list li h2 {
-  color: #f18200;
+  color: #800000;
   font: 200 14pt/1.3 Arial, sans-serif;
   letter-spacing: 0;
   margin: 20px 0 10px;
@@ -228,7 +232,7 @@ nav h1 a {
 }
 
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #800000;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -259,7 +263,7 @@ nav h1 a {
 }
 
 #restaurant-name {
-  color: #f18200;
+  color: #800000;
   font: 200 20pt/1.1 Arial,sans-serif;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -290,7 +294,7 @@ nav h1 a {
 }
 
 #reviews-container h2 {
-  color: #f58500;
+  color: #800000;
   font-size: 300 24pt;
   letter-spacing: -1px;
   padding-bottom: 1pt;
